<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="album_all_images">All Images</string>
    <string name="album_all_images_videos">All Images/Videos</string>
    <string name="album_all_videos">All Videos</string>
    <string name="album_camera_image_capture">Take Picture</string>
    <string name="album_camera_video_capture">Record Video</string>
    <string name="album_cancel">Cancel</string>
    <string name="album_check">Selected</string>
    <string name="album_check_album_little">Please select a media item.</string>
    <string name="album_check_image_little">Please select a image item.</string>
    <string name="album_check_video_little">Please select a video item.</string>
    <string name="album_confirm">Confirm</string>
    <string name="album_converting">Loading…</string>
    <string name="album_item_unavailable">Unavailable</string>
    <string name="album_loading">Loading…</string>
    <string name="album_menu_finish">Finish</string>
    <string name="album_not_found_album">No media items found</string>
    <string name="album_not_found_image">No image items found</string>
    <string name="album_not_found_video">No video items found</string>
    <string name="album_ok">OK</string>
    <string name="album_permission_camera_image_failed_hint">No Camera permission or Storage permission, please authorize before use.</string>
    <string name="album_permission_camera_video_failed_hint">No Camera permission, Storage permission or Microphone permission, please authorize it before use.</string>
    <string name="album_permission_storage_failed_hint">No storage permission, please authorize before use.</string>
    <string name="album_take_file_unavailable">Unavailable file, please try again.</string>
    <string name="album_thumbnail">Generating thumbnails…</string>
    <string name="album_title">Media Album</string>
    <string name="album_title_permission_failed">Permission denied</string>
    <string name="ali_auth_sms_code_success_hint">验证码已发送(%ss)\10</string>
    <string name="ali_auth_sms_veri_title">请输入 %s 收到的验证码</string>
    <string name="ali_auth_verification_reGetCode">重新获取验证码</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_14_message">调用外部API传入参数为null，请加入参数再试</string>
    <string name="alisdk_message_17_action" />
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="alisdk_message_801_action">请调整参数后重试当前操作</string>
    <string name="alisdk_message_801_message">商品数量必须为整数并大于 0</string>
    <string name="alisdk_message_801_name">QUANTITY_FORMAT_ERROR</string>
    <string name="alisdk_message_801_type">E</string>
    <string name="alisdk_message_802_action">请修改传入的淘客 pid，如不确认，请联系淘客相关人员</string>
    <string name="alisdk_message_802_message">当前传入的淘客 pid {0} 非法，正确格式应以 mm_ 为前缀</string>
    <string name="alisdk_message_802_name">INVALID_TAOKE_PID_ERROR</string>
    <string name="alisdk_message_802_type">E</string>
    <string name="alisdk_message_803_action">请在初始化之前调用 TradeConfigs.defaultTaokePid=mm_**** 设置默认的淘客 pid 值, 此值会在相关方法调用时未指定 pid 时使用</string>
    <string name="alisdk_message_803_message">未设置默认的淘客 pid</string>
    <string name="alisdk_message_803_name">INVALID_DEFAULT_TAOKE_PID</string>
    <string name="alisdk_message_803_type">W</string>
    <string name="alisdk_message_804_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_804_message">使用支付宝支付失败，支付宝错误码为 8000, 含义为正在处理中</string>
    <string name="alisdk_message_804_name">PAY_IN_PROGRESS</string>
    <string name="alisdk_message_804_type">E</string>
    <string name="alisdk_message_805_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_805_message">使用支付宝支付失败，支付宝错误码为 4000, 含义为订单支付失败</string>
    <string name="alisdk_message_805_name">PAY_ORDER_FAILED</string>
    <string name="alisdk_message_805_type">E</string>
    <string name="alisdk_message_806_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_806_message">使用支付宝支付失败，支付宝错误码为 6001, 含义为用户中途取消</string>
    <string name="alisdk_message_806_name">PAY_USER_CANCEL</string>
    <string name="alisdk_message_806_type">E</string>
    <string name="alisdk_message_807_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_807_message">使用支付宝支付失败，支付宝错误码为 6002, 含义为网络连接出错</string>
    <string name="alisdk_message_807_name">PAY_NETWORK_FAILED</string>
    <string name="alisdk_message_807_type">E</string>
    <string name="alisdk_message_808_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_808_message">使用支付宝支付失败，支付宝错误码为 {0}</string>
    <string name="alisdk_message_808_name">PAY_COMMON_ERROR</string>
    <string name="alisdk_message_808_type">E</string>
    <string name="alisdk_message_809_message">使用Apliay SDK调用方法失败，请下载最新的ApliaySDK lib包或者使用H5方式付款</string>
    <string name="aliuser_cancel">取消</string>
    <string name="aliuser_common_ok">确定</string>
    <string name="aliuser_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliuser_param_invalid">参数不合法</string>
    <string name="aliuser_ssl_error_info">证书错误. 是否继续访问?</string>
    <string name="aliuser_ssl_error_title">SSL证书错误</string>
    <string name="aliusersdk_api_unauthorized">API未授权</string>
    <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliusersdk_session_error">亲，你的操作已超时，请重试</string>
    <string name="app_name">旅行世界</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appdownloader_button_cancel_download">取消</string>
    <string name="appdownloader_button_queue_for_wifi">排队</string>
    <string name="appdownloader_button_start_now">立即开始</string>
    <string name="appdownloader_download_percent">%1$d%%</string>
    <string name="appdownloader_download_remaining">剩余时间：%1$s</string>
    <string name="appdownloader_download_unknown_title">&lt;未命名&gt;</string>
    <string name="appdownloader_duration_hours">%1$d 小时</string>
    <string name="appdownloader_duration_minutes">%1$d 分钟</string>
    <string name="appdownloader_duration_seconds">%1$d 秒</string>
    <string name="appdownloader_jump_unknown_source">请打开应用安装权限，以便顺利安装！</string>
    <string name="appdownloader_label_cancel">取消</string>
    <string name="appdownloader_label_ok">确定</string>
    <string name="appdownloader_notification_download">下载</string>
    <string name="appdownloader_notification_download_complete_open">下载完成，点击打开。</string>
    <string name="appdownloader_notification_download_complete_with_install">下载完成，点击安装。</string>
    <string name="appdownloader_notification_download_complete_without_install">下载完成</string>
    <string name="appdownloader_notification_download_delete">确认要删除%1$s的下载任务吗？</string>
    <string name="appdownloader_notification_download_failed">下载失败。</string>
    <string name="appdownloader_notification_download_install">安装</string>
    <string name="appdownloader_notification_download_open">打开</string>
    <string name="appdownloader_notification_download_pause">暂停</string>
    <string name="appdownloader_notification_download_restart">重新下载</string>
    <string name="appdownloader_notification_download_resume">继续</string>
    <string name="appdownloader_notification_download_space_failed">SdCard空间不足, 下载失败。</string>
    <string name="appdownloader_notification_download_waiting_net">等待网络继续下载</string>
    <string name="appdownloader_notification_download_waiting_wifi">等待wifi开始下载</string>
    <string name="appdownloader_notification_downloading">正在下载</string>
    <string name="appdownloader_notification_need_wifi_for_size">文件过大，需要通过 WLAN 下载。</string>
    <string name="appdownloader_notification_paused_in_background">已在后台暂停。</string>
    <string name="appdownloader_notification_prepare">准备中</string>
    <string name="appdownloader_notification_request_btn_no">立即下载</string>
    <string name="appdownloader_notification_request_btn_yes">去设置</string>
    <string name="appdownloader_notification_request_message">为了您能在方便地在通知栏控制下载任务，请到设置中开启通知，如果不需要可直接下载</string>
    <string name="appdownloader_notification_request_title">设置</string>
    <string name="appdownloader_tip">提示</string>
    <string name="appdownloader_wifi_recommended_body">立即开始下载此内容 (%1$s ) 可能会缩短电池的使用时间并/或导致过量使用移动数据连接流量（这可能导致移动运营商向您收费，具体取决于您的流量套餐）。\10\10触摸“%2$s”可在下次连接到 WLAN 网络时开始下载此内容。</string>
    <string name="appdownloader_wifi_recommended_title">稍后再加入下载队列吗？</string>
    <string name="appdownloader_wifi_required_body">您必须使用 WLAN 完成此内容 (%1$s ) 的下载。\10\10触摸“%2$s ”可在下次连接到 WLAN 网络时开始下载此内容。</string>
    <string name="appdownloader_wifi_required_title">文件太大，不适于通过运营商网络下载</string>
    <string name="auth_sdk_message_10003_action" />
    <string name="auth_sdk_message_10003_message">用户取消登录或登录失败</string>
    <string name="auth_sdk_message_10003_name">USER_CANCEL</string>
    <string name="auth_sdk_message_10003_type">I</string>
    <string name="auth_sdk_message_10004_action" />
    <string name="ysf_evaluation_btn_submit">提交</string>
    <string name="ysf_evaluation_dialog_et_hint_remark">评价备注</string>
    <string name="ysf_evaluation_tips">请对我们的服务做出评价</string>
    <string name="ysf_message_robot_evaluation_hint">填写具体原因</string>
    <string name="ysf_robot_answer_useful">有用</string>
    <string name="ysf_robot_answer_useless">没用</string>
</resources>