<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dist="http://schemas.android.com/apk/distribution" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/ysf_robot_evaluate_layout" android:layout_width="@dimen/ysf_bubble_content_max_width" android:layout_height="wrap_content">
    <include layout="@layout/ysf_include_divider"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@+id/ysf_robot_evaluate_useful" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:textSize="@dimen/ysf_text_size_16" android:textColor="@color/ysf_robot_evaluate_text_selector" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ysf_robot_answer_useful" android:drawableLeft="@drawable/ysf_ic_robot_useful_selector" android:drawablePadding="10dp"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/ysf_robot_evaluate_useless" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:textSize="@dimen/ysf_text_size_16" android:textColor="@color/ysf_robot_evaluate_text_selector" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ysf_robot_answer_useless" android:drawableLeft="@drawable/ysf_ic_robot_useless_selector" android:drawablePadding="10dp"/>
        </FrameLayout>
    </LinearLayout>
    <TextView android:textSize="@dimen/ysf_text_size_12" android:textColor="@color/ysf_grey_666666" android:textColorHint="@color/ysf_grey_999999" android:ellipsize="end" android:id="@+id/ysf_robot_evaluation_content" android:background="@drawable/ysf_message_robot_answer_evaluation_bg" android:padding="6dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginRight="12dp" android:layout_marginBottom="12dp" android:hint="@string/ysf_message_robot_evaluation_hint" android:maxLines="3"/>
</LinearLayout>
