<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dist="http://schemas.android.com/apk/distribution" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/ysf_white" android:layout_width="match_parent" android:layout_height="wrap_content">
    <FrameLayout android:background="@color/ysf_grey_f1f1f1" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/ysf_text_size_16" android:textColor="@color/ysf_black_222222" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginBottom="12dp" android:text="@string/ysf_evaluation_tips"/>
        <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/ysf_evaluation_dialog_close" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ysf_ic_dialog_close" android:contentDescription="@null"/>
    </FrameLayout>
    <ScrollView android:id="@+id/scroll_view" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@+id/ysf_evaluation_dialog_radio_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:layout_marginRight="10dp"/>
            <com.qiyukf.unicorn.widget.flowlayout.TagFlowLayout android:id="@+id/ysf_evaluation_tag_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="15dp" android:layout_marginRight="15dp"/>
            <EditText android:textSize="@dimen/ysf_text_size_13" android:textColor="@color/ysf_black_80000000" android:textColorHint="@color/ysf_grey_cccccc" android:gravity="top" android:id="@+id/ysf_evaluation_dialog_et_remark" android:background="@drawable/ysf_evaluation_remark_border" android:padding="5dp" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:layout_marginBottom="5dp" android:hint="@string/ysf_evaluation_dialog_et_hint_remark" android:maxLength="100" android:imeOptions="flagNoExtractUi"/>
        </LinearLayout>
    </ScrollView>
    <Button android:enabled="false" android:textSize="@dimen/ysf_text_size_16" android:textColor="@color/ysf_btn_common_text_color_selector" android:gravity="center" android:id="@+id/ysf_btn_submit" android:background="@drawable/ysf_evaluation_dialog_btn_submit_bg_selector" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp" android:text="@string/ysf_evaluation_btn_submit"/>
</LinearLayout>
